--- a/ToDoList/Views/Home/Index.cshtml
+++ b/ToDoList/Views/Home/Index.cshtml
@@ -8,6 +8,7 @@
       rel="stylesheet" 
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
       crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="~/css/styles.css" />
   </head>
   <body>
     <h1>Welcome to the To Do List!</h1>
